--- a/covid/styles/results/style.scss
+++ b/covid/styles/results/style.scss
@@ -1,11 +1,5 @@
 @import "nav";
-@import "line";
-@import "table";
-@import "first_title";
-@import "second_title";
-@import "third_title";
-@import "button";
-@import "bullet_text";
+@import "results";
 @import "footer";
 * {
     margin: 0;
