--- a/covid/styles/description/_nav.scss
+++ b/covid/styles/description/_nav.scss
@@ -17,7 +17,7 @@
 
 nav {
     margin: auto;
-    width: 80%;
+    width: 100%;
     min-height: 10vh;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -107,6 +107,21 @@ nav .dropdown-content a:hover {
 
 nav .dropdown:hover .dropdown-content {
     display: block;
+}
+
+.survey {
+    background: #A80315;
+    padding: 10px;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    border-radius: 35px;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    font-family: Arial;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
 }
 
 @media only screen and (max-width: 1200px) {
