--- a/covid/styles/style.css
+++ b/covid/styles/style.css
@@ -17,7 +17,7 @@
 
 nav {
   margin: auto;
-  width: 80%;
+  width: 100%;
   min-height: 10vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -107,6 +107,22 @@ nav .dropdown-content a:hover {
 
 nav .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.survey {
+  background: #A80315;
+  padding: 10px;
+  -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+          box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 35px;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  font-family: Arial;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -313,8 +329,8 @@ nav .dropdown:hover .dropdown-content {
   display: grid;
   -ms-grid-columns: 10% (minmax(10px, 1fr))[10] 10%;
       grid-template-columns: 10% repeat(10, minmax(10px, 1fr)) 10%;
-  -ms-grid-rows: 0.4fr 0.5fr 0.5fr 0.6fr;
-      grid-template-rows: 0.4fr 0.5fr 0.5fr 0.6fr;
+  -ms-grid-rows: 0.4fr 0.5fr 0.5fr 0.3fr;
+      grid-template-rows: 0.4fr 0.5fr 0.5fr 0.3fr;
 }
 
 #concern {
