--- a/covid/styles/results/style.css
+++ b/covid/styles/results/style.css
@@ -185,7 +185,7 @@ nav .dropdown:hover .dropdown-content {
 }
 
 .results {
-  min-height: 60vh;
+  min-height: 20vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -218,9 +218,9 @@ nav .dropdown:hover .dropdown-content {
   margin: 90px;
 }
 
-@media only screen and (max-width: 414px) {
+@media only screen and (max-width: 415px) {
   .results {
-    min-height: 60vh;
+    min-height: 20vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -257,9 +257,9 @@ nav .dropdown:hover .dropdown-content {
   }
 }
 
-@media only screen and (min-width: 414px) and (max-width: 768px) {
+@media only screen and (min-width: 415px) and (max-width: 768px) {
   .results {
-    min-height: 70vh;
+    min-height: 20vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -293,6 +293,121 @@ nav .dropdown:hover .dropdown-content {
   }
   h1 {
     font-size: 30px;
+  }
+}
+
+.results_text {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 10% (minmax(10px, 1fr))[10] 10%;
+      grid-template-columns: 10% repeat(10, minmax(10px, 1fr)) 10%;
+  -ms-grid-rows: 2fr 5fr;
+      grid-template-rows: 2fr 5fr;
+  background-color: #A80315;
+  color: white;
+}
+
+.survey_title {
+  padding: 20px;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 8;
+  grid-column: 2/10;
+}
+
+.survey_list {
+  margin-left: 50px;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 8;
+  grid-column: 2/10;
+  padding: 20px;
+}
+
+.left_wing {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  background-color: #A80315;
+}
+
+.right_wing {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  -ms-grid-column: 12;
+  -ms-grid-column-span: 1;
+  grid-column: 12/13;
+  background-color: #A80315;
+}
+
+@media only screen and (max-width: 415px) {
+  .results_text {
+    -ms-grid-rows: 1fr 2fr;
+        grid-template-rows: 1fr 2fr;
+  }
+  .survey_title {
+    font-size: 14px;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 10;
+    grid-column: 2/12;
+  }
+  .survey_list {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 10;
+    grid-column: 2/12;
+    font-size: 10px;
+    margin-left: 10px;
+    padding: auto;
+  }
+}
+
+@media only screen and (min-width: 415px) and (max-width: 768px) {
+  .results_text {
+    -ms-grid-rows: 0.5fr 2fr;
+        grid-template-rows: 0.5fr 2fr;
+  }
+  .survey_title {
+    font-size: 20px;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 10;
+    grid-column: 2/12;
+  }
+  .survey_list {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 10;
+    grid-column: 2/12;
+    font-size: 14px;
+    margin-left: 10px;
+    padding: auto;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .results_text {
+    -ms-grid-rows: 0.5fr 2fr;
+        grid-template-rows: 0.5fr 2fr;
+  }
+  .survey_title {
+    font-size: 20px;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 10;
+    grid-column: 2/12;
+  }
+  .survey_list {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 10;
+    grid-column: 2/12;
+    font-size: 14px;
+    margin-left: 10px;
+    padding: auto;
   }
 }
 
