--- a/covid/styles/_footer.scss
+++ b/covid/styles/_footer.scss
@@ -28,7 +28,7 @@ footer {
     }
     .social {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-start;
     }
     .center_image {
         display: grid;
